--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ version = pVersion
 
 if (project.hasProperty("topobyte")) {
     apply from: 'file:///' + System.getProperty("user.home") \
-        + '/.gradle/topobyte.gradle'
+        + '/.gradle/topobyte7.gradle'
 }
 
 repositories {
@@ -20,6 +20,9 @@ repositories {
     }
     mavenCentral()
 }
+
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 dependencies {
     compile 'joda-time:joda-time:2.9.7'
